--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
                 <div class="advantages__item">
                     <img src="icons/advantages/cup.png" alt="cup" class="advantages__icon">
                     <div class="advantages__subtitle">
-                        Делимся опытом
+                        Делимся своим опытом
                     </div>
                     <div class="advantages__descr">
                         Наши сотрудники всегда готовы поделиться своим опытом, 
