--- a/src/index.html
+++ b/src/index.html
@@ -98,4 +98,20 @@
         </div>
     </div>
 
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title_left">
+				Получите бесплатную консультацию<br>
+				по подбору пульсометра 
+			</h2>
+				<div class="consultation__descr">
+					Просто заполните форму заявки<br>
+					и мы перезвоним вам в течении 10 минут
+				</div>
+        </div>
+    </div>
+</body>
+</html>
+
+
     
