--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/font.css">
+	<link rel="stylesheet" href="css/font.css">
+	<link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <div class="promo">
+    <section class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -54,11 +55,10 @@
                     <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
                 </div>
             </div>
-            
         </div>
-    </div>
+    </section>
 
-    <div class="advantages">
+    <section class="advantages">
         <div class="container">
             <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantages__wrapper">
@@ -96,9 +96,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="consultation">
+    <section class="consultation">
         <div class="container">
             <h2 class="title title_left">
 				Получите бесплатную консультацию<br>
@@ -115,7 +115,29 @@
 					<button class="button button_submit">заказать консультацию</button>
 				</form>
         </div>
-    </div>
+	</section>
+	
+	<section class="carousel">
+		<div class="container">
+			<div class="carousel__inner">
+				<div>
+					<img src="img/slide_1.jpg" alt="slide">
+				</div>
+				<div>
+					<img src="img/slide_2.jpg" alt="slide">
+				</div>
+				<div>
+					<img src="img/slide_3.jpg" alt="slide">
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/script.js"></script>
+	
 </body>
 </html>
 
